# CryptoScope

./: .gitignore  Cargo.toml  Dockerfile.backend  README.md  SESSION_LOG.md
.github/workflows/: ci.yml  release.yml
deployment/: README.md
deployment/docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  MCP.md
frontend/src/app/: globals.css
frontend/src/app/compare/: columns.tsx
frontend/src/app/screener/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/stats/: page.tsx
frontend/src/components/: DataTable.tsx  StatCard.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/src/components/settings/: api-key-dialog.tsx  api-key-form.tsx  index.ts  password-field.tsx  security-banner.tsx  theme-preview.tsx
frontend/src/components/stitch/: FilterChip.tsx  StatusPip.tsx  StitchCard.tsx  TerminalInput.tsx  ThemeToggle.tsx  index.ts
frontend/src/components/ui/: button.tsx  card.tsx  table.tsx
frontend/src/hooks/: useScreener.ts  useStats.ts  useSymbols.ts
frontend/src/lib/: api.ts  crypto.ts  formatters.ts  index.ts  mock-data.ts  settings-storage.ts  sort.ts  status.ts
frontend/src/lib/stitch/: design-tokens.ts  index.ts  stitch-provider.tsx
src/: cli.rs  error.rs  lib.rs  logging.rs  main.rs  test_utils.rs  utils.rs
src/api/: auth.rs  error.rs  exchanges.rs  extractors.rs  mod.rs  refresh.rs  screener.rs  stats.rs  symbols.rs  types.rs  utils.rs
src/core/: http.rs  logging.rs  mod.rs  output.rs  security.rs  test_utils.rs
src/core/db/: connection.rs  repository.rs  schema.rs
src/core/exchange/: bybit.rs  factory.rs
src/core/screener/: fetcher.rs  mod.rs  output.rs
src/core/utils/: mod.rs  parse.rs  path.rs
src/db/: connection.rs  mod.rs  repository.rs  schema.rs
src/exchange/: bybit.rs  exchange_trait.rs
src/fetcher/: instrument_fetcher.rs  mod.rs
src/mcp/: client.rs  mod.rs  response.rs  types.rs  validation.rs
src/models/: mod.rs  price.rs  response.rs  statistics.rs  symbol.rs
src/output/: formatter.rs  json_output.rs  mod.rs
src/screener/: calculator.rs  fetcher.rs  mod.rs  output.rs
src/tui/: app.rs  key_handler.rs  mod.rs  mouse.rs  runner.rs  theme.rs
src/tui/widgets/: footer.rs  header.rs  mod.rs  popup.rs  screener_table.rs  stats_panel.rs  symbol_table.rs  table_common.rs
