[package]
name = "cryptoscope"
version = "0.5.0"
edition = "2024"
description = "Multi-exchange crypto symbols intelligence tool"
authors = ["CryptoScope Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# For better table output
terminal_size = "0.4"

# TUI framework
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform directories
dirs = "6.0"

# Terminal colors
colored = "3.1"
